[project]
name = "tigerpy_drawing"
version = "1.0.0"
description = "Tigerpy Drawing Python Library"
readme = "README.md"
authors = [{ name="Pradeep Yadav", email="tigerpydev@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["svg", "drawing", "canvas"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["tigerpy_drawing"]


